Stable version for delivery of add items UI

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,8 +1,7 @@
-<ion-header>
-</ion-header>
+<ion-header> </ion-header>
 
 <ion-content>
   <div class="content">
-      <img src="../../assets/images/landing.png" height="100%">
-</div>
+    <img src="../../assets/images/landing.png" height="100%" />
+  </div>
 </ion-content>
