--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,234 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title class="ion-text-center"> Menu </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-scroll scrollY="true">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image1.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Hainanese Chicken Rice</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                Hainanese chicken rice is a dish of poached chicken and seasoned
+                rice, served with chilli sauce and usually with cucumber
+                garnishes.
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$6.70</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image2.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Mushroom Rice</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                This easy rice dish is one of my favorite mushroom recipes!
+                Garlicky, buttery rice combined with tender caramelized cremini
+                mushrooms.
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$14.20</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image3.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Fried Rice</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                Fried Rice is a combination of long grained rice, mixture of
+                warm peas, carrots and onions with scrambled eggs mixed all
+                together!
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$6.20</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image4.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Mee Rebus</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                Mee Rebus is a Malay noodle dish in a sweet potato-based gravy.
+                The combination of sweetness and savoury flavours are
+                deliciously enhanced
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$12.20</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image5.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Lontong</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                Lontong is an Indonesian dish made of compressed rice cake in
+                the form of a cylinder wrapped inside a banana leaf, commonly
+                found in Indonesia, Malaysia
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$7.10</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div class="content">
+            <img
+              style="min-height: 200px; min-width: 200px"
+              src="../../assets/images/image6.jpg"
+            />
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-text-center">
+            <ion-text color="secondary">
+              <h1>Mee Goreng</h1>
+            </ion-text>
+            <ion-text color="secondary">
+              <h2>
+                Mee Goreng. Thick chewy egg noodles smothered in a glossy, sweet
+                and savoury sauce with pork belly, shrimp, fish cakes, Chinese
+                chives
+              </h2>
+            </ion-text>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-text color="primary">
+            <h1>$4.30</h1>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center" style="margin: auto">
+          <ion-button color="success" expand="block">Add Item</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-scroll>
 </ion-content>
